# octra

./: .gitignore  README.md  pyproject.toml
config/: telegram.env.example
docs/: FULLY_AUTOMATIC.md  HFHE_V2_STATUS.md  OUTPERFORM_WRITEUP.md  SOCIAL_WATCH.md  TOKENS_AND_AWS.md  UNLOCK_RUNBOOK.md  scope.md  source-manifest.md  telegram.md
scripts/: archive-monthly.sh  auto-update.sh  backup-logs.sh  body-bind-daily.sh  bootstrap-vps.sh  claim-hourly.sh  configure-telegram.sh  final-verification.sh  harden-vps.sh  install-ops.sh  install-watchdog.sh  integrity-daily.sh  intel-repos.sh  lexicon-daily.sh  ops-cycle.sh  sync-to-vps.sh  tg-poll.sh  vps-update.sh  watchdog.sh
src/octra_recon/: __init__.py  artifacts.py  challenge_days.py  claim.py  cli.py  dashboard.py  full_stack.py  github_lexicon.py  hypotheses.py  intel_digest.py  intel_exhaust.py  lpn.py  lpn_audit.py  mask_diff.py  ops.py  rng_audit.py  social_watch.py  sources.py  surface.py  telegram.py  tg_commands.py  unlock_scan.py  wallet.py  wire_audit.py  workspace.py
src/octra_recon/race/: __init__.py  bkw_sweep.py  body_bind.py  composition.py  planted.py  residual.py  suite.py
tests/: test_artifacts.py  test_claim_dashboard.py  test_github_lexicon.py  test_lpn.py  test_lpn_audit.py  test_ops.py  test_race.py  test_social_watch.py  test_surface.py  test_telegram.py  test_wallet.py  test_wire_stack.py  test_workspace.py
