[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "octra-recon"
version = "0.1.0"
description = "Reproducible, non-executing Octra source and artifact reconnaissance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
octra-recon = "octra_recon.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
octra_recon = ["data/*.txt"]
